infra/k8s/istio/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: meta-studio-ad-studio-app-spa-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "ad-studio-app.us-central1.meta-studio.com"
    tls:
      httpsRedirect: true # Redirect http to https
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: ingress-credential # Assumes a secret with this name exists
    hosts:
    - "ad-studio-app.us-central1.meta-studio.com"
